infra/global/n8n/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: infrastructure
spec:
  selector:
    app: n8n
  type: ClusterIP
  ports:
    - name: http
      port: 5678
      targetPort: 5678
